--- a/.github/workflow/vuepress-deploy.yml
+++ b/.github/workflow/vuepress-deploy.yml
@@ -10,9 +10,8 @@ jobs:
     - name: vuepress-deploy
       uses: jenkey2011/vuepress-deploy@master
       env:
-        ACCESS_TOKEN: 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
+        ACCESS_TOKEN: ${{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}}
         TARGET_REPO: jiayechao/teamsite
         TARGET_BRANCH: gh-pages
         BUILD_SCRIPT: npm && npm run docs:build
         BUILD_DIR: docs/.vuepress/dist
-        CNAME: https://www.xxx.com
