--- a/.github/workflows/vuepress-deploy.yml
+++ b/.github/workflows/vuepress-deploy.yml
@@ -10,7 +10,7 @@ jobs:
     - name: vuepress-deploy
       uses: jenkey2011/vuepress-deploy@master
       env:
-        ACCESS_TOKEN: ${{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}}
+        ACCESS_TOKEN: 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
         TARGET_REPO: jiayechao/teamsite
         TARGET_BRANCH: gh-pages
         BUILD_SCRIPT: npm && npm run docs:build
